--- a/CustomRPC/Strings.bg.resx
+++ b/CustomRPC/Strings.bg.resx
@@ -124,21 +124,21 @@
     <value>Не е посочено ID!</value>
   </data>
   <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Възникна грешка при изтегляне или инсталиране на ъпдейт.
+    <value>Възникна грешка при изтегляне или инсталиране на актуализация.
 Натиснете "Да“ за да опитате отново или "Не“ за да изтеглите ръчно.</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>Първо бягане</value>
+    <value>Първо пускане</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
     <value>Искате ли да отворите ръководството?
-Можете да го отворите по всяко време, като отидете на Help -&gt; Open the Manual или натиснете F1.</value>
+Можете да го отворите по всяко време, като отидете на Помощ -&gt; Отвори ръководство или натиснете F1.</value>
   </data>
   <data name="information" xml:space="preserve">
     <value>Информация</value>
   </data>
   <data name="statusConnected" xml:space="preserve">
-    <value>Свързан</value>
+    <value>Свързано</value>
   </data>
   <data name="statusConnecting" xml:space="preserve">
     <value>Свръзване...</value>
@@ -147,26 +147,26 @@
     <value>Връзката е неуспешна (Работи ли Discord?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
-    <value>Изключен</value>
+    <value>Прекъсната връзка</value>
   </data>
   <data name="statusError" xml:space="preserve">
     <value>Грешка при свързване (Грешно ID?)</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>Невалиден линк за бутон(и) или текста е твърде голям!</value>
+    <value>Невалидна връзка за бутон(и) или текста е твърде голям!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
     <value>Няма връзка към интернет!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
-    <value>Няма намерени ъпдейти!</value>
+    <value>Няма намерени актуализации!</value>
   </data>
   <data name="errorCorruptSettings" xml:space="preserve">
     <value>Файлът с настройки е повреден.
-Натиснете Да, за да нулирате настройките, натиснете Не, за да излезете.</value>
+Натиснете Да, за да нулирате настройките, натиснете Не, за да прекратите.</value>
   </data>
   <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>Неуспешно импортиране на предварителна настройка; файлът липсва, повреден е или не е правилно форматиран.</value>
+    <value>Неуспешно импортиране на предварителна настройка; файлът липсва, повреден е или е неправилно форматиран.</value>
   </data>
   <data name="askAnalyticsConsent" xml:space="preserve">
     <value>Позволявате ли на CustomRP да изпраща вашите анализи на използването на разработчика?
@@ -177,5 +177,8 @@
   </data>
   <data name="errorLoadingAssembly" xml:space="preserve">
     <value>Моля, добавете „{0}“ path към изключенията на вашата антивирусна програма. Преинсталирайте CustomRP, ако тази грешка продължава.</value>
+  </data>
+  <data name="errorInvalidImageURL" xml:space="preserve">
+    <value>Връзката към исображението е твърде дълга!</value>
   </data>
 </root>
