--- a/CustomRPC/UpdatePrompt.bg.resx
+++ b/CustomRPC/UpdatePrompt.bg.resx
@@ -128,13 +128,13 @@
     <value>222, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Искате ли да изтеглите този ъпдейт?</value>
+    <value>Искате ли да изтеглите тази актуализация?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>236, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Не проверявайте за ъпдейти отново</value>
+    <value>Не проверявайте за актуализации отново</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>Сегашната Версия:
