--- a/CustomRPC/Strings.id.resx
+++ b/CustomRPC/Strings.id.resx
@@ -178,4 +178,7 @@ Tekan Ya untuk mereset pengaturan, tekan Tidak untuk keluar.</value>
   <data name="errorLoadingAssembly" xml:space="preserve">
     <value>Harap tambahkan jalur "{0}" ke pengecualian antivirus Anda. Instal ulang CustomRP jika kesalahan ini berlanjut.</value>
   </data>
+  <data name="errorInvalidImageURL" xml:space="preserve">
+    <value>Url gambar terlalu panjang!</value>
+  </data>
 </root>
