--- a/CustomRPC/ErrorReportViewer.fi.resx
+++ b/CustomRPC/ErrorReportViewer.fi.resx
@@ -131,7 +131,7 @@
     <value>CustomRP on kaatunut edellisessä istunnossa seuraavan käsittelemättömän poikkeuksen vuoksi:</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Virhe Raportti</value>
+    <value>Virhe raportti</value>
   </data>
   <data name="buttonOK.Text" xml:space="preserve">
     <value>OK</value>
