--- a/CustomRPC/UpdatePrompt.fi.resx
+++ b/CustomRPC/UpdatePrompt.fi.resx
@@ -121,7 +121,7 @@
     <value>Kyllä</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Ei Nyt</value>
+    <value>Ei nyt</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
@@ -144,9 +144,9 @@ Uusin versio:</value>
     <value>116, 23</value>
   </data>
   <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>Ohitä Tämä Versio</value>
+    <value>Ohitä tämä versio</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Päivitys Saatavilla</value>
+    <value>Päivitys saatavilla</value>
   </data>
 </root>
