--- a/CustomRPC/Strings.ja.resx
+++ b/CustomRPC/Strings.ja.resx
@@ -181,4 +181,7 @@
   <data name="errorInvalidImageURL" xml:space="preserve">
     <value>画像のURLが長すぎます！</value>
   </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>スタートアップのショートカットの追加または削除に失敗しました:</value>
+  </data>
 </root>
