--- a/CustomRPC/Strings.vi.resx
+++ b/CustomRPC/Strings.vi.resx
@@ -181,4 +181,7 @@ Chọn Có để đặt lại thiết lập, chọn Không để thoát.</value>
   <data name="errorInvalidImageURL" xml:space="preserve">
     <value>URL của ảnh quá dài!</value>
   </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>Không thể thêm hoặc xóa lối tắt khởi động:</value>
+  </data>
 </root>
