--- a/CustomRPC/Strings.zh-Hant.resx
+++ b/CustomRPC/Strings.zh-Hant.resx
@@ -181,4 +181,7 @@
   <data name="errorInvalidImageURL" xml:space="preserve">
     <value>此圖像的 URL 過長！</value>
   </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>新增或刪除捷徑失敗：</value>
+  </data>
 </root>
