--- a/CustomRPC/ErrorReportViewer.pt.resx
+++ b/CustomRPC/ErrorReportViewer.pt.resx
@@ -118,9 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="labelInfo.Text" xml:space="preserve">
-    <value>CustomRP parou de funcionar na ultima sessão por causa disto:</value>
+    <value>CustomRP parou de funcionar na ultima sessão por causa deste erro:</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Reporto de Erro</value>
+  </data>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>OK</value>
   </data>
 </root>
